# cl51

./: .gitignore  LICENSE  README.md  Setup.hs  cabal.project  cl51.cabal  hie.yaml
example/Example/: Project.hs  program.S
src/: MCS51.hs
src/MCS51/: ALU.hs  CPU.hs  Core.hs  Exec.hs  ISA.hs  InstructionSet.hs  Interrupt.hs  TH.hs
src/MCS51/ISA/: Arith.hs  Branch.hs  Move.hs  Types.hs
tests/: doctests.hs  synth.hs  unittests.hs
tests/Tests/Example/: Project.hs
tests/Tests/MCS51/: CPU.hs  ISASim.hs  InstructionSet.hs  Instructions.hs  Interrupt.hs  StateRecord.hs
