cabal-version:       3.0
name:                cl51
version:             0.1
license:             MIT
author:              Jonathan Fraser <jonathanfras@gmail.com>
maintainer:          Jonathan Fraser <jonathanfras@gmail.com>
build-type:          Simple

common common-options
  default-extensions:
    DataKinds
    TypeApplications
    TypeFamilies
    TypeOperators
    ScopedTypeVariables
    KindSignatures
    ConstraintKinds
    FlexibleContexts
    RankNTypes
    NoStarIsType
    LambdaCase
    TupleSections
    TemplateHaskell
  ghc-options:
    -Wall -Wcompat
  build-depends:
    base,
    isacle,
    isacle:isacle-hdl

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    MCS51.ISA
    MCS51.ISA.Types
    MCS51.ISA.Arith
    MCS51.ISA.Move
    MCS51.ISA.Branch
  default-language: Haskell2010

test-suite synth
  import: common-options
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          synth.hs
  build-depends:
    cl51,
    isacle,
    isacle:isacle-hdl,
    directory

test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: unittests.hs
  other-modules:
    Tests.MCS51.ISASim
    Tests.MCS51.StateRecord
  build-depends:
    cl51,
    isacle,
    containers,
    hedgehog,
    tasty >= 1.2 && < 1.6,
    tasty-hedgehog,
    tasty-th
